fixed display bg on mobile

--- a/index.css
+++ b/index.css
@@ -551,6 +551,7 @@ footer {
   }
 
   .img-bg-mobile {
+    display: flex;
     position: relative;
     transform: translateY(-9%) translateX(0%);
   }
